# ecoach

./: .backend_extraction_ledger.md  .gitignore  ARCHITECTURE.md  Cargo.toml  ECOACH_REBUILD_MASTER.md  FEATURE_INVENTORY.md  REBUILD_ORDER.md  SCREEN_INVENTORY.md  adeo eCoachGames - IDEAS & CONCEPTS.txt  agent1_part1.md  agent1_part2.md  agent1_part3.md  agent1_part4.md  all_standards_dump.json  backend_execution_plan.md  backend_implement_agent1.md  backend_implement_agent2.md  backend_supplement_missing_details.md  detailed_backend_implementation_plan.md  frontend_implementation_plan.md  frontend_ux_analysis_v1.md  frontend_ux_analysis_v2.md  idea1.txt  idea10.txt  idea11.txt  idea13.txt  idea14.txt  idea15.txt  idea17.txt  idea18.txt  idea19.txt  idea2.txt  idea20.txt  idea21.txt  idea23.txt  idea27.txt  idea29.txt  idea3.txt  idea32.txt  idea34.txt  (+7 more)
.aidesigner/: latest.json  mcp-latest.html
.claude/: settings.local.json
backend notes/: ecoach_backend_implementation_plan_canonical_v1.docx  ecoach_backend_implementation_plan_canonical_v1.md
crates/ecoach-coach-brain/: Cargo.toml
crates/ecoach-coach-brain/src/: answer_construction.rs  beat_yesterday_deep.rs  constitution.rs  evidence_engine.rs  exam_strategy.rs  goal_engine.rs  intelligence_dome.rs  intelligence_store.rs  intervention_library.rs  journey.rs  journey_adaptation.rs  judgment_engine.rs  lib.rs  mastery_map.rs  memory_intelligence.rs  pedagogical_runtime.rs  plan_engine.rs  prerequisite_graph.rs  readiness_engine.rs  rise_mode_engine.rs  session_composer.rs  state_machine.rs  stepped_question_engine.rs  topic_action_engine.rs  topic_case.rs  topic_proof_engine.rs  velocity_engine.rs
crates/ecoach-commands/: Cargo.toml
crates/ecoach-commands/src/: assessment_commands.rs  attempt_commands.rs  coach_commands.rs  content_commands.rs  curriculum_commands.rs  diagnostic_commands.rs  dtos.rs  error.rs  game_commands.rs  identity_commands.rs  intake_commands.rs  lib.rs  library_commands.rs  memory_commands.rs  mock_commands.rs  premium_commands.rs  product_commands.rs  question_commands.rs  readiness_commands.rs  recovery_commands.rs  repair_commands.rs  reporting_commands.rs  session_commands.rs  state.rs  student_commands.rs  traps_commands.rs
crates/ecoach-content/: Cargo.toml
crates/ecoach-content/src/: content_intelligence.rs  content_strategy_registry.rs  foundry_coordinator.rs  lib.rs  manifest.rs  pack_service.rs  publish_pipeline.rs  resource_intelligence.rs  resource_readiness.rs
crates/ecoach-curriculum/: Cargo.toml
crates/ecoach-diagnostics/: Cargo.toml
crates/ecoach-elite/: Cargo.toml
crates/ecoach-forecast/: Cargo.toml
crates/ecoach-forecast/src/: blueprint_resolver.rs  calibration.rs  forecast_engine.rs  lib.rs  models.rs  pattern_miner.rs
crates/ecoach-games/: Cargo.toml
crates/ecoach-games/src/: lib.rs  models.rs  service.rs
crates/ecoach-glossary/: Cargo.toml
crates/ecoach-goals-calendar/: Cargo.toml
crates/ecoach-identity/: Cargo.toml
crates/ecoach-identity/src/: lib.rs  models.rs  service.rs
crates/ecoach-intake/: Cargo.toml
crates/ecoach-intake/src/: lib.rs  models.rs  service.rs
crates/ecoach-knowledge-gap/: Cargo.toml
crates/ecoach-library/: Cargo.toml
crates/ecoach-memory/: Cargo.toml
crates/ecoach-mock-centre/: Cargo.toml
crates/ecoach-mock-centre/src/: diagnosis.rs  lib.rs  models.rs  service.rs
crates/ecoach-past-papers/: Cargo.toml
crates/ecoach-premium/: Cargo.toml
crates/ecoach-questions/: Cargo.toml
crates/ecoach-questions/src/: lib.rs  models.rs  reactor.rs  selection.rs  service.rs
crates/ecoach-reporting/: Cargo.toml
crates/ecoach-reporting/src/: dashboard.rs  lib.rs  oversight.rs  parent.rs  strategy.rs
crates/ecoach-sessions/: Cargo.toml
crates/ecoach-sessions/src/: lib.rs  models.rs  service.rs
crates/ecoach-storage/: Cargo.toml
crates/ecoach-storage/src/: backup.rs  connection.rs  lib.rs  migrations.rs  recovery.rs
crates/ecoach-student-model/: Cargo.toml
crates/ecoach-substrate/: Cargo.toml
docs/: PAST_PAPERS_PHASE3.md
docs/architecture/: backend-layer-map.md
docs/decisions/: 0001-keep-rust-for-core-backend.md
docs/features/: analytics-and-reporting.md  core-platform-foundation.md  curriculum-ingestion-and-intelligence.md  dna-diagnostic.md  memory-decay-and-retention.md  question-bank-and-content-layer.md  session-runtime.md  student-and-identity.md  study-plan-and-journey.md  super-admin-foundation.md
docs/recovery/: 2026-04-19-final-rebuild-checklist.md  forensic_product_map.md  reconstruction_matrix.md  recovery_checklist.md
docs/ui/: screen-pattern-rebuild-kit.md
features/: features_ideas_13_to_20.md  features_ideas_1_to_5.md  features_ideas_21_to_31.md  features_ideas_32_to_38.md  features_ideas_6_to_12.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue
ideas/: idea12.txt  idea16.txt  idea22.txt  idea24.txt  idea25.txt  idea26.txt  idea28.txt  idea30.txt  idea31.txt  idea33.txt  idea36.txt  idea5.txt  idea9.txt
implementation/: 01_architecture_and_design_system.md  02_types_and_ipc.md  03_domain_specs_1.md  04_domain_specs_2.md
migrations/runtime/: 001_identity.sql  002_curriculum.sql  003_questions.sql  004_student_state.sql  005_sessions.sql  006_coach.sql  007_memory.sql  008_runtime_events.sql  009_session_runtime.sql  010_goals_calendar.sql  011_content_packs.sql  012_reporting.sql  013_glossary.sql  014_library.sql  015_games.sql  016_past_papers.sql  017_traps.sql  018_intake.sql  019_premium.sql  020_elite.sql  (+84 more)
outputs/: mathematics_topic_mapping_corrected.xlsx
scripts/: fix_math_topic_mapping.py  generate_math_ccp_questions.mjs  sync_math_topic_titles.py  sync_math_topic_titles_runtime.py  validate_ipc_command_coverage.mjs  validate_math_ccp_questions.mjs  validate_offline_capability.mjs  validate_offline_dependency_scan.mjs  validate_offline_readiness.mjs  validate_offline_runtime_contract.mjs  validate_question_sql_columns.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
(+508 files in other folders)
