[workspace]
members = [
    "crates/ecoach-substrate",
    "crates/ecoach-storage",
    "crates/ecoach-identity",
    "crates/ecoach-curriculum",
    "crates/ecoach-content",
    "crates/ecoach-questions",
    "crates/ecoach-student-model",
    "crates/ecoach-sessions",
    "crates/ecoach-commands",
    "crates/ecoach-diagnostics",
    "crates/ecoach-coach-brain",
    "crates/ecoach-reporting",
    "crates/ecoach-goals-calendar",
    "crates/ecoach-glossary",
    "crates/ecoach-library",
    "crates/ecoach-games",
    "crates/ecoach-past-papers",
    "crates/ecoach-intake",
    "crates/ecoach-premium",
    "crates/ecoach-elite",
    "crates/ecoach-memory",
    "crates/ecoach-mock-centre",
    "crates/ecoach-knowledge-gap",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Proprietary"
version = "0.1.0"

[workspace.dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
