[package]
name = "ecoach-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ecoach-coach-brain = { path = "../crates/ecoach-coach-brain" }
ecoach-commands = { path = "../crates/ecoach-commands" }
ecoach-content = { path = "../crates/ecoach-content" }
ecoach-games = { path = "../crates/ecoach-games" }
ecoach-identity = { path = "../crates/ecoach-identity" }
ecoach-library = { path = "../crates/ecoach-library" }
ecoach-memory = { path = "../crates/ecoach-memory" }
ecoach-mock-centre = { path = "../crates/ecoach-mock-centre" }
ecoach-premium = { path = "../crates/ecoach-premium" }
ecoach-questions = { path = "../crates/ecoach-questions" }
ecoach-sessions = { path = "../crates/ecoach-sessions" }
ecoach-substrate = { path = "../crates/ecoach-substrate" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
