[package]
name = "ecoach-content"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecoach-questions = { path = "../ecoach-questions" }
ecoach-substrate = { path = "../ecoach-substrate" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ecoach-glossary = { path = "../ecoach-glossary" }
ecoach-storage = { path = "../ecoach-storage" }
