[package]
name = "ecoach-games"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecoach-substrate = { path = "../ecoach-substrate" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ecoach-content = { path = "../ecoach-content" }
ecoach-identity = { path = "../ecoach-identity" }
ecoach-storage = { path = "../ecoach-storage" }
