[package]
name = "ecoach-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
ecoach-substrate = { path = "../ecoach-substrate" }
rand_core.workspace = true
rusqlite.workspace = true
serde.workspace = true

[dev-dependencies]
ecoach-storage = { path = "../ecoach-storage" }
