[package]
name = "ecoach-intake"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecoach-substrate = { path = "../ecoach-substrate" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
zip = "2"

[dev-dependencies]
ecoach-storage = { path = "../ecoach-storage" }
