[package]
name = "ecoach-mock-centre"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ecoach-substrate = { path = "../ecoach-substrate" }
ecoach-forecast = { path = "../ecoach-forecast" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ecoach-storage = { path = "../ecoach-storage" }
