[package]
name = "ecoach-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
ecoach-premium = { path = "../ecoach-premium" }
ecoach-substrate = { path = "../ecoach-substrate" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
