[package]
name = "ecoach-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
ecoach-substrate = { path = "../ecoach-substrate" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip = "2"
